@@ -21,10 +21,11 @@ public class SystemInformationMapper {
             return organisation;
         }
         GBFSData data = si.getData();
+        String language = data.getLanguages().getFirst();
         organisation.setNetexId(this.superIdPrefix + ":Organisation:" + data.getSystemId());
-        String language = data.getLanguages().get(0);
+        organisation.setOriginalId(data.getSystemId());
         organisation.setLanguage(language);
-        organisation.setName(data.getName().get(0).getText());
+        organisation.setName(data.getName().getFirst().getText());
         if (CollectionUtils.isNotEmpty(data.getShortName())) {
             data.getShortName().stream()
                     .filter(sn -> language.equals(sn.getLanguage()))
