@@ -34,12 +34,12 @@ package org.rutebanken.tiamat.service.poi;
 import org.rutebanken.helper.organisation.ReflectionAuthorizationService;
 import org.rutebanken.tiamat.auth.UsernameFetcher;
 import org.rutebanken.tiamat.changelog.EntityChangedListener;
+import org.rutebanken.tiamat.changelog.LoggingService;
+import org.rutebanken.tiamat.importer.mdm.MdmService;
 import org.rutebanken.tiamat.model.DataManagedObjectStructure;
 import org.rutebanken.tiamat.model.EntityInVersionStructure;
-import org.rutebanken.tiamat.model.Parking;
 import org.rutebanken.tiamat.model.PointOfInterest;
 import org.rutebanken.tiamat.model.StopPlace;
-import org.rutebanken.tiamat.repository.ParkingRepository;
 import org.rutebanken.tiamat.repository.PointOfInterestRepository;
 import org.rutebanken.tiamat.repository.reference.ReferenceResolver;
 import org.slf4j.Logger;
@@ -47,7 +47,6 @@ import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
@@ -60,25 +59,25 @@ public class PointOfInterestDeleter {
     private static final Logger logger = LoggerFactory.getLogger(PointOfInterestDeleter.class);
 
     private final EntityChangedListener entityChangedListener;
-
     private final ReflectionAuthorizationService authorizationService;
-
     private final UsernameFetcher usernameFetcher;
-
-    private PointOfInterestRepository pointOfInterestRepository;
-
-    private ReferenceResolver referenceResolver;
+    private final MdmService mdmService;
+    private final LoggingService loggingService;
+    private final PointOfInterestRepository pointOfInterestRepository;
+    private final ReferenceResolver referenceResolver;
 
     @Autowired
     public PointOfInterestDeleter(PointOfInterestRepository pointOfInterestRepository,
                                   EntityChangedListener entityChangedListener,
                                   ReflectionAuthorizationService authorizationService,
-                                  UsernameFetcher usernameFetcher, ReferenceResolver referenceResolver) {
+                                  UsernameFetcher usernameFetcher, ReferenceResolver referenceResolver, MdmService mdmService, LoggingService loggingService) {
         this.pointOfInterestRepository = pointOfInterestRepository;
         this.entityChangedListener = entityChangedListener;
         this.authorizationService = authorizationService;
         this.usernameFetcher = usernameFetcher;
         this.referenceResolver = referenceResolver;
+        this.mdmService = mdmService;
+        this.loggingService = loggingService;
     }
 
     public boolean deletePointOfInterest(String pointOfInterestId) {
@@ -88,21 +87,27 @@ public class PointOfInterestDeleter {
 
         List<PointOfInterest> pointsOfInterest = pointOfInterestRepository.findByNetexId(pointOfInterestId);
 
-        if(pointsOfInterest.isEmpty()) {
+        if (pointsOfInterest.isEmpty()) {
             throw new IllegalArgumentException("Cannot find point of interest to delete from ID: " + pointOfInterestId);
         }
 
-        for(PointOfInterest pointOfInterest : pointsOfInterest) {
-            if(pointOfInterest.getParentSiteRef() != null) {
+        for (PointOfInterest pointOfInterest : pointsOfInterest) {
+            if (pointOfInterest.getParentSiteRef() != null) {
                 DataManagedObjectStructure resolved = referenceResolver.resolve(pointOfInterest.getParentSiteRef());
-                if(resolved instanceof StopPlace) {
-                    authorizationService.assertAuthorized(ROLE_EDIT_STOPS, Arrays.asList(resolved));
+                if (resolved instanceof StopPlace) {
+                    authorizationService.assertAuthorized(ROLE_EDIT_STOPS, List.of(resolved));
                 }
             }
         }
 
+        for (PointOfInterest pointOfInterest : pointsOfInterest) {
+            loggingService.logPOIDeletion(usernameForAuthenticatedUser, pointOfInterest);
+        }
+
+
         pointOfInterestRepository.deleteAll(pointsOfInterest);
         notifyDeleted(pointsOfInterest);
+        mdmService.deletePoisBySuperId(pointOfInterestId);
 
         logger.warn("All versions ({}) of point of interest {} deleted by user {}", pointsOfInterest.size(), pointOfInterestId, usernameForAuthenticatedUser);
 
